--- a/templates/supervisord.conf
+++ b/templates/supervisord.conf
@@ -2,6 +2,8 @@
 nodaemon=true
 
 [program:nginx]
+command=nginx -c /etc/nginx/nginx.conf  -g 'daemon off;'
+numprocs=1
 autostart=true
 autorestart=false
 startsecs=0
@@ -11,6 +13,7 @@ stdout_logfile_maxbytes=0
 
 [program:php-fpm]
 command=php-fpm7.1 -R -F -c /etc/php/7.1/fpm/php-fpm.conf
+numprocs=1
 autostart=true
 autorestart=false
 startsecs=0
