--- a/templates/supervisord.conf
+++ b/templates/supervisord.conf
@@ -12,7 +12,7 @@ stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 
 [program:php-fpm]
-command=php-fpm7.1 -R -F -c /etc/php/7.1/fpm/php-fpm.conf
+command=/usr/local/sbin/php-fpm
 numprocs=1
 autostart=true
 autorestart=false
