--- a/templates/nginx.cnf
+++ b/templates/nginx.cnf
@@ -1,11 +1,11 @@
-#user  nobody;
+user  nginx;
 worker_processes auto;
 
-#error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
+error_log  logs/error.log;
+error_log  logs/error.log  notice;
+error_log  logs/error.log  info;
 
-#pid        run/nginx.pid;
+pid     run/nginx.pid;
 
 
 events {
@@ -17,22 +17,21 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
 
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    #access_log  logs/access.log  main;
+    access_log  logs/access.log  main;
 
     sendfile        on;
-    #tcp_nopush     on;
+    tcp_nopush     on;
 
-    #keepalive_timeout  0;
     keepalive_timeout 2;
 	client_max_body_size 100m;
 
     server_tokens off;
-    #gzip  on;
+    gzip  on;
 
-    include /etc/nginx/sites-enabled/*;
+    include /etc/nginx/conf.d/*.conf;
 }
 #daemon off;
