Updated nginx configurations

--- a/templates/default.nginx.cnf
+++ b/templates/default.nginx.cnf
@@ -11,7 +11,7 @@ server {
     index index.php;
 
 ## serve imagecache files directly or redirect to drupal if they do not exist.
-    location ~* files/styles {
+    location ~ ^/sites/.*/files/styles/ {
       access_log off;
       expires 30d;
       try_files $uri @drupal;
