--- a/templates/default.nginx.cnf
+++ b/templates/default.nginx.cnf
@@ -1,177 +1,108 @@
-upstream php {
-    server 127.0.0.1:9000;
-}
-
 server {
-    listen 80 default_server;
-    access_log  /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    server_name example.com;
+    root /var/www/drupal8; ## <-- Your only path reference.
 
-    root /var/www/web;
-    index index.php;
-
-## serve imagecache files directly or redirect to drupal if they do not exist.
-    location ~ ^/sites/.*/files/styles/ {
-      access_log off;
-      expires 30d;
-      try_files $uri @drupal;
-    }
-
-## serve imagecache files directly or redirect to drupal if they do not exist.
-    location ~* ^.+.(xsl|xml)$ {
-      access_log off;
-      expires 1d;
-      try_files $uri @drupal;
-    }
-
-## Default location
-    location / {
-        try_files $uri $uri/ @drupal;
-        index  index.php;
-
-        location ~* /sites/.+/files/advagg_css/ {
-            expires max;
-            add_header ETag '';
-            add_header Last-Modified 'Wed, 20 Jan 1988 04:20:42 GMT';
-            add_header Accept-Ranges '';
-            location ~* /sites/.*/files/advagg_css/css[_[:alnum:]]+\.css$ {
-                access_log off;
-                try_files $uri @drupal;
-            }
-        }
-
-        location ~* /sites/.+/files/advagg_js/ {
-            expires max;
-            add_header ETag '';
-            add_header Last-Modified 'Wed, 20 Jan 1988 04:20:42 GMT';
-            add_header Accept-Ranges '';
-            location ~* /sites/.*/files/advagg_js/js[_[:alnum:]]+\.js$ {
-                access_log off;
-                try_files $uri @drupal;
-            }
-        }
-
-        location ~* /admin/reports/hacked/.+/diff/ {
-            try_files $uri @drupal;
-        }
-
-        location ~* /rss.xml {
-            try_files $uri @drupal-no-args;
-        }
-
-        location ~* /sitemap.xml {
-            try_files $uri @drupal;
-        }
-
-        location ~* ^.+\.(?:css|cur|js|jpe?g|gif|htc|ico|png|xml|otf|ttf|eot|woff|woff2|svg|svgz)$ {
-            access_log off;
-            expires 30d;
-            tcp_nodelay off;
-            open_file_cache max=3000 inactive=120s;
-            open_file_cache_valid 45s;
-            open_file_cache_min_uses 2;
-            open_file_cache_errors off;
-
-            location ~* ^.+\.svgz$ {
-                gzip off;
-                add_header Content-Encoding gzip;
-            }
-        }
-
-        location ~* ^.+\.(?:pdf|pptx?)$ {
-            expires 30d;
-            tcp_nodelay off;
-        }
-
-        location ~* ^(?:.+\.(?:htaccess|make|txt|engine|inc|info|install|module|profile|po|pot|sh|.*sql|test|theme|tpl(?:\.php)?|xtmpl)|code-style\.pl|/Entries.*|/Repository|/Root|/Tag|/Template)$ {
-            return 404;
-        }
-    }
-
-    location @drupal {
-        rewrite ^ /index.php;
-    }
-
-## Images and static content is treated different
-    location ~* ^.+.(jpg|jpeg|gif|css|png|js|ico|xml)$ {
-      access_log        off;
-      expires           30d;
-    }
-
-    location ~* ^/update.php {
-        fastcgi_param QUERY_STRING $args;
-        fastcgi_param SCRIPT_NAME /update.php;
-        fastcgi_param SCRIPT_FILENAME $document_root/update.php;
-        fastcgi_pass php;
-    }
-
-    location ^~ /.bzr {
-        return 404;
-    }
-
-    location ^~ /.git {
-        return 404;
-    }
-
-    location ^~ /.hg {
-        return 404;
-    }
-
-    location ^~ /.svn {
-        return 404;
-    }
-
-    location ^~ /.cvs {
-        return 404;
-    }
-
-    location ^~ /patches {
-        return 404;
-    }
-
-    location ^~ /backup {
-        return 404;
+    location = /favicon.ico {
+        log_not_found off;
+        access_log off;
     }
 
     location = /robots.txt {
+        allow all;
+        log_not_found off;
         access_log off;
-        try_files $uri @drupal-no-args;
     }
 
-    location = /favicon.ico {
-        expires 30d;
-        try_files /favicon.ico @empty;
+    # Very rarely should these ever be accessed outside of your lan
+    location ~* \.(txt|log)$ {
+        allow 192.168.0.0/16;
+        deny all;
     }
 
+    location ~ \..*/.*\.php$ {
+        return 403;
+    }
+
+    location ~ ^/sites/.*/private/ {
+        return 403;
+    }
+
+    # Block access to scripts in site files directory
+    location ~ ^/sites/[^/]+/files/.*\.php$ {
+        deny all;
+    }
+
+    # Allow "Well-Known URIs" as per RFC 5785
     location ~* ^/.well-known/ {
         allow all;
     }
 
-## Parse all .php file in the /var/www directory
-    location ~ .php$ {
-        include fastcgi_params;
-        fastcgi_split_path_info ^(.+\.php)(.*)$;
-        fastcgi_pass   php;
-        fastcgi_index  index.php;
-        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
-        fastcgi_param  SCRIPT_NAME      $fastcgi_script_name;
-        fastcgi_param  QUERY_STRING     $query_string;
-        fastcgi_param  REQUEST_METHOD   $request_method;
-        fastcgi_param  CONTENT_TYPE     $content_type;
-        fastcgi_param  CONTENT_LENGTH   $content_length;
-        fastcgi_intercept_errors        on;
-        fastcgi_ignore_client_abort     off;
-        fastcgi_connect_timeout 60;
-        fastcgi_send_timeout 180;
-        fastcgi_read_timeout 180;
-        fastcgi_buffer_size 128k;
-        fastcgi_buffers 4 256k;
-        fastcgi_busy_buffers_size 256k;
-        fastcgi_temp_file_write_size 256k;
+    # Block access to "hidden" files and directories whose names begin with a
+    # period. This includes directories used by version control systems such
+    # as Subversion or Git to store control files.
+    location ~ (^|/)\. {
+        return 403;
     }
 
-## Disable viewing .htaccess & .htpassword
-    location ~ /\.ht {
-        deny  all;
+    location / {
+        # try_files $uri @rewrite; # For Drupal <= 6
+        try_files $uri /index.php?$query_string; # For Drupal >= 7
+    }
+
+    location @rewrite {
+        rewrite ^/(.*)$ /index.php?q=$1;
+    }
+
+    # Don't allow direct access to PHP files in the vendor directory.
+    location ~ /vendor/.*\.php$ {
+        deny all;
+        return 404;
+    }
+
+    # In Drupal 8, we must also match new paths where the '.php' appears in
+    # the middle, such as update.php/selection. The rule we use is strict,
+    # and only allows this pattern with the update.php front controller.
+    # This allows legacy path aliases in the form of
+    # blog/index.php/legacy-path to continue to route to Drupal nodes. If
+    # you do not have any paths like that, then you might prefer to use a
+    # laxer rule, such as:
+    #   location ~ \.php(/|$) {
+    # The laxer rule will continue to work if Drupal uses this new URL
+    # pattern with front controllers other than update.php in a future
+    # release.
+    location ~ '\.php$|^/update.php' {
+        fastcgi_split_path_info ^(.+?\.php)(|/.*)$;
+        # Security note: If you're running a version of PHP older than the
+        # latest 5.3, you should have "cgi.fix_pathinfo = 0;" in php.ini.
+        # See http://serverfault.com/q/627903/94922 for details.
+        include fastcgi_params;
+        # Block httpoxy attacks. See https://httpoxy.org/.
+        fastcgi_param HTTP_PROXY "";
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param QUERY_STRING $query_string;
+        fastcgi_intercept_errors on;
+        # PHP 5 socket location.
+        #fastcgi_pass unix:/var/run/php5-fpm.sock;
+        # PHP 7 socket location.
+        fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
+    }
+
+    # Fighting with Styles? This little gem is amazing.
+    # location ~ ^/sites/.*/files/imagecache/ { # For Drupal <= 6
+    location ~ ^/sites/.*/files/styles/ { # For Drupal >= 7
+        try_files $uri @rewrite;
+    }
+
+    # Handle private files through Drupal. Private file's path can come
+    # with a language prefix.
+    location ~ ^(/[a-z\-]+)?/system/files/ { # For Drupal >= 7
+        try_files $uri /index.php?$query_string;
+    }
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+        try_files $uri @rewrite;
+        expires max;
+        log_not_found off;
     }
 }
